with top box content fixed, still not centered in box

--- a/positioning.css
+++ b/positioning.css
@@ -12,7 +12,6 @@
 .mainArticle {
     z-index:1;
     overflow: scroll;
-    border: 1px solid;
 }
 
 .para {
